# Subnet-Calculator

./: README.md  index.html  pyproject.toml
.github/workflows/: ci.yml
subnetcalc/: LICENSE  README.md  pyproject.toml
subnetcalc/.github/workflows/: ci.yml
subnetcalc/subnetcalc/: __init__.py  cli.py  core.py
subnetcalc/tests/: test_core.py
